# Deck-PlusPlus

./: Cargo.toml  README.md  build.rs
Data/: Profiles.json
Deck/: platformio.ini
Deck/src/: main.cpp
Source/: action.rs  comms.rs  config.rs  main.rs  profile.rs
UI/: App.slint  Confpanel.slint  Datatypes.slint  Keysel.slint  Theme.slint
UI/Widgets/: Button.slint  Card.slint  Checkbutton.slint  Navbar.slint  Stack.slint
