[package]
name = "Deck"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Deck"
path = "Source/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.12.2"
image = "0.25.10"
once_cell = "1.21.4"
screenshots = "0.8.10"
serde = "1.0.228"
serde_json = "1.0.149"
serialport = "4.9.0"
slint = "1.14.1"

[build-dependencies]
slint-build = "1.15"

[profile.release]
codegen-units = 1
lto = true
